# data-enrichment-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: schemas.py
app/api/middleware/: correlation.py
app/api/routes/: enrichment.py  health.py
app/core/: correlation.py  exceptions.py  logging_config.py
app/db/: session.py
app/integrations/: web_client.py
app/models/: __init__.py  enrichment.py
app/repositories/: enrichment_repository.py
app/schemas/: domain.py
app/services/: alerting.py  enrichment_pipeline.py  html_extraction.py  metrics_service.py  quality_scoring.py  site_scraper.py  website_discovery.py
app/services/ai/: __init__.py  openai_client.py  prompts.py
data/sample_run/: companies.yaml
docs/: architecture.md  implementation-plan.md  problem-definition.md  runbook.md
docs/decisions/: 001-website-discovery-strategy.md  002-ai-extraction-and-classification-approach.md  003-data-quality-scoring-framework.md  004-storage-and-pipeline-run-tracking.md  005-retry-and-failure-handling-strategy.md
eval/: README.md  __init__.py  pipeline-dag.mmd  run_evaluation.py
eval/reports/: .gitignore
migrations/: env.py
migrations/versions/: 001_enrichment_tables.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/integration/: test_api_edge_cases.py  test_api_metrics.py  test_metrics_mixed_runs.py  test_pipeline.py  test_pipeline_edge_cases.py
tests/unit/: test_ai_schema.py  test_alerting.py  test_eval_sample_assets.py  test_html_extraction.py  test_metrics_service.py  test_openai_enrichment_client.py  test_quality_edge_cases.py  test_quality_scoring.py  test_web_client.py
(+1 files in other folders)
